Add authentication support
No actual OAuth login support yet. This merely allows the server to
recognize authenticated clients.
